Fixed image issues. Image very distorted.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .image {
-    background-image: url(/assets/images/Sams-photo.jpg);
+    /* background-image: url(/assets/images/Sams-photo.jpg); */
     height: 250px;
     width: 100%;
     margin-bottom: 0.5%;
